--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
   <div class="notes">
-    {% for post in site.posts %}
+    {% for post in paginator.posts %}
       <article>
         <a class="link" href="{{ post.url | prepend: site.baseurl }}">
           <span class="note-date">{{ post.date | date: "%b %-d, %Y" }}</span>
@@ -14,5 +14,19 @@ layout: default
       </article>
     {% endfor %}
   </ul>
+
+  <!-- Pagination links -->
+<div class="pagination">
+  {% if paginator.previous_page %}
+    <a href="{{ paginator.previous_page_path }}" class="previous">Next</a>
+  {% else %}
+    <span class="previous"></span>
+  {% endif %}
+  {% if paginator.next_page %}
+    <a href="{{ paginator.next_page_path }}" class="next">Previous</a>
+  {% else %}
+    <span class="next "></span>
+  {% endif %}
+</div>
 
 </div>
