--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@ layout: default
 
   <div class="notes">
     {% for post in paginator.posts %}
+    {% if post.photoblog != null %}
+    {% else %}
+
       <article>
         <a class="link" href="{{ post.url | prepend: site.baseurl }}">
           <span class="note-date">{{ post.date | date: "%b %-d, %Y" }}</span>
@@ -12,6 +15,7 @@ layout: default
           {{ post.content }}
         </div>
       </article>
+    {% endif %}
     {% endfor %}
   </ul>
 
