--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@ layout: default
   <!-- Pagination links -->
 <div class="pagination">
   {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path }}" class="previous">Next</a>
+    <a href="{{ paginator.previous_page_path }}" class="previous">➔</a>
   {% else %}
     <span class="previous"></span>
   {% endif %}
   {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path }}" class="next">Previous</a>
+    <a href="{{ paginator.next_page_path }}" class="next">➔</a>
   {% else %}
     <span class="next "></span>
   {% endif %}
