--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ layout: default
 
 <div>
   {% for post in paginator.posts %}
-
+  {% if post.blog != null %}
+  {% else %}
 
     <article>
       <a class="link" href="{{ post.url | prepend: site.baseurl }}">
@@ -14,7 +15,7 @@ layout: default
         {{ post.content }}
       </div>
     </article>
-
+  {% endif %}
   {% endfor %}
 </div>
 
